[tool.poetry]
name = "bc_client"
version = "0.1.0"
description = ""
authors = ["shunkimura-3700 <auau3700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bitmerchant = "^0.1.8"
requests = "^2.23.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
